kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/default-backend: "default/backend"
spec:
  rules:
  - host: default-backend.loibis.com
    http:
      paths:
      - backend:
          service:
            name: default
            port:
              name: http
        path: /
        pathType: Prefix
